--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <li> <a href="Experiencia.html">EXPERIENCIA</a>   </li>
        </ol>
        <p> <h2>INFORMACIÓN PERSONAL</h2> </p>
-       <img src="img/PERFIL.jpg" alt="Ingeniero" title="Ingeniero" width="100px" height="100px" style="Border:10px solid green;">
+       <img src="img/Foto.jpg" alt="Ingeniero" title="Ingeniero" width="100px" height="100px" style="Border:10px solid green;">
        <p> <h2>PERFIL</h2> </p>
 
        <ul>
