--- a/index.html
+++ b/index.html
@@ -13,37 +13,41 @@
     </head>
   </head>
   <body>
+    <header>
         <svg height="100" width="100" style="border:10px solid black;">
           <image xlink:href="img/Logo.svg" width="100px" height="100px" x="2px" y="2px" ></image>
         </svg>
-
+      </header>
 
       <h1>Hoja de Vida</h1>
-      <p> <h2>Nombres y Apellidos: Elvi Renee Bazalar Ganoza</h2></p>
-      <p><h3>Feha y lugar de nacimiento: 26 de julio de 1979 - Huacho-Lima-Peru</h3></p>
-       <ol>
-         <li><a href="index.html">INICIO</a>  </li>
-         <li><a href="educacion.html">EDUCACIÓN</a>  </li>
-         <li> <a href="Experiencia.html">EXPERIENCIA</a>   </li>
-       </ol>
+      <p> <h2>Nombres y Apellidos:  Elvi Renee Bazalar Ganoza </h2></p>
+      <p><h3>Feha y lugar de nacimiento: <strong>26 de julio de 1979</strong> - Huacho-Lima-Peru</h3></p>
+<nav>
+  <a href="index.html">INICIO</a>
+  <a href="educacion.html">EDUCACIÓN</a>
+  <a href="Experiencia.html">EXPERIENCIA</a>
+</nav>
+
        <p> <h2>INFORMACIÓN PERSONAL</h2> </p>
        <img src="img/Foto.jpg" alt="Ingeniero" title="Ingeniero" width="100px" height="100px" style="Border:10px solid green;">
        <p> <h2>PERFIL</h2> </p>
-
-       <ul>
-         <li>Dispuesto a aprender y desarrollar nuevos conocimientos, así como estar al día sobre los avances en áreas como la tecnología, la informática, el comercio electrónico y las redes de telefonía móvil.</li>
+<section>
+<article id="ArticuloIntroduccion">
+         <ul>
+         <li><strong>Dispuesto a aprender y desarrollar nuevos conocimientos</strong>, así como estar al día sobre los avances en áreas como la tecnología, la informática, el comercio electrónico y las redes de telefonía móvil.</li>
          <li>Excelentes habilidades de resolución de problemas.</li>
          <li>Habilidades de gestión y de organización de las redes, por ejemplo, para el cartografiado de las redes de cables.</li>
          <li>Habilidades de investigación, de redacción y de presentación de informes.</li>
-         <li>Capacidad de adquirir un conocimiento completo del producto con el que se trabaja.</li>
+         <li><strong>Capacidad de adquirir un conocimiento completo del producto con el que se trabaja.</strong></li>
          <li>Fuertes conocimientos sobre software informáticos, ya que los ordenadores cada vez se utilizan más para el control de sistemas de telecomunicaciones.</li>
          <li>Buenas habilidades de comunicación, ya que tendrá que explicar información técnica a personas sin formación técnica.</li>
-         <li>INGLES BASICO</li>
+         <li><strong>INGLES BASICO</strong></li>
        </ul>
-
+</article>
+</section>
 <footer>
-correo: Samaritano2607@hotmail.com <br>
-cel: 981340872 <br>
+correo: <strong>Samaritano2607@hotmail.com </strong><br>
+cel: <strong>981340872</strong> <br>
 facebook:
 </footer>
 
