--- a/Experiencia.html
+++ b/Experiencia.html
@@ -12,42 +12,37 @@
     </head>
   </head>
   <body>
-    <body>
-          <svg height="100" width="100" style="border:10px solid black;">
-            <image xlink:href="img/Logo.svg" width="100px" height="100px" x="2px" y="2px" ></image>
-          </svg>
+    <header>
+        <svg height="100" width="100" style="border:10px solid black;">
+          <image xlink:href="img/Logo.svg" width="100px" height="100px" x="2px" y="2px" ></image>
+        </svg>
+      </header>
 
+      <h1>Hoja de Vida</h1>
+      <p> <h2>Nombres y Apellidos:  Elvi Renee Bazalar Ganoza </h2></p>
+      <p><h3>Feha y lugar de nacimiento: <strong>26 de julio de 1979</strong> - Huacho-Lima-Peru</h3></p>
+        <nav>
+          <a href="index.html">INICIO</a>
+          <a href="educacion.html">EDUCACIÓN</a>
+          <a href="Experiencia.html">EXPERIENCIA</a>
+        </nav>
 
-        <h1>Hoja de Vida</h1>
-        <p> <h2>Nombres y Apellidos: Elvi Renee Bazalar Ganoza</h2></p>
-        <p><h3>Feha y lugar de nacimiento: 26 de julio de 1979 - Huacho-Lima-Peru</h3></p>
-         <ol>
-           <li><a href="index.html">INICIO</a>  </li>
-           <li><a href="educacion.html">EDUCACIÓN</a>  </li>
-           <li> <a href="Experiencia.html">EXPERIENCIA</a>   </li>
-         </ol>
+        <h2>EXPERIENCIA</h2>
+  <section>
+      <article>
+         <p style="color:#FF0000";><strong>Chistecito</strong></p>
+         <video src="video/chistecito.webm"  controls poster="img/chiste.jpg" width="200px" height="200px">    </video><br>
+       </article>
+       <article>
+         <p style="color:#FF0000";><strong>Labios Compartidos de Maná</strong></p>
+         <audio src="audio/Labios.mp3" controls preload="auto"></audio><br>
+       </article>
+    </section>
 
-
-         <p> <h2>EXPERIENCIA</h2> </p>
-         <h3>Chistecito</h3>
-         <br>
-         <video src="video/chistecito.webm"  controls poster="img/chiste.jpg" width="200px" height="200px">    </video><br><br><br>
-         <h3>Labios Compartidos de Maná</h3>
-         <audio src="audio/Labios.mp3" controls preload="auto"></audio><br><br><br>
-
-
-
-
-
-
-
-  <footer>
-  correo: Samaritano2607@hotmail.com <br>
-  cel: 981340872 <br>
-  facebook:
-  </footer>
-
-    </body>
-
+    <footer>
+    correo: <strong>Samaritano2607@hotmail.com </strong><br>
+    cel: <strong>981340872</strong> <br>
+    facebook:
+    </footer>
   </body>
 </html>
